# local-spaces

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/: renovate.json
.github/workflows/: build-container.yaml  tests.yaml
local_spaces/: app.py  local.py
local_spaces/templates/: index.html
